# ida-structor

./: CMakeLists.txt  LICENSE  README.md
ProjectSettings/: ProjectSettings.asset
bench/: bench_algorithms.cpp  test_alloc.cpp  test_overlap.cpp  test_union_find.cpp
docs/: CROSS_FUNCTION_SIBLING_DISCOVERY.md  Z3_SYNTHESIS_PLAN.md  Z3_TYPE_INFERENCE.md
include/structor/: access_collector.hpp  api.hpp  config.hpp  cross_function_analyzer.hpp  layout_synthesizer.hpp  optimized_algorithms.hpp  optimized_containers.hpp  simd.hpp  structor.hpp  structure_persistence.hpp  synth_types.hpp  type_fixer.hpp  type_propagator.hpp  ui_integration.hpp  utils.hpp
include/structor/analysis/: access_collector.hpp  call_graph.hpp  cross_function_analyzer.hpp  vtable_detector.hpp
include/structor/bindings/: api.hpp
include/structor/core/: config.hpp  fwd.hpp  synth_types.hpp  utils.hpp
include/structor/synthesis/: layout_synthesizer.hpp  structure_persistence.hpp  type_fixer.hpp  type_propagator.hpp
include/structor/ui/: pseudocode_rewriter.hpp  ui_integration.hpp
include/structor/z3/: alias_analysis.hpp  array_constraints.hpp  instruction_semantics.hpp  layout_constraints.hpp  type_applicator.hpp  type_encoding.hpp  type_inference_engine.hpp  type_lattice.hpp
integration_tests/: test_callgraph_return.c
src/: cross_function_analyzer.cpp  plugin.cpp
src/analysis/: access_collector.cpp  cross_function_analyzer.cpp  vtable_detector.cpp
src/bindings/: api.cpp  python_bindings.cpp
src/core/: config.cpp
src/synthesis/: layout_synthesizer.cpp  structure_persistence.cpp  type_propagator.cpp
src/ui/: plugin.cpp  pseudocode_rewriter.cpp  ui_integration.cpp
src/z3/: alias_analysis.cpp  array_constraints.cpp  constraint_tracker.cpp  field_candidates.cpp  instruction_semantics.cpp  layout_constraints.cpp  type_applicator.cpp  type_inference_engine.cpp  type_lattice.cpp
test/: CMakeLists.txt  mock_ida.hpp  test_type_lattice.cpp
